Mock Exam Answers/multi-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: multi-pod
  name: multi-pod
spec:
  containers:
  - name: alpha
    image: nginx
    resources: {}
  - name: beta
    image: busybox
    command:
    - sh
    - -c
    - "sleep 4800"
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
