Mock Exam Answers/redis-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: redis-storage
  name: redis-storage
spec:
  containers:
  - image: redis:alpine
    name: redis-storage
    resources: {}
    volumeMounts:
    - mountPaths: "/data/redis"
      name: redis-storage
  volumes:
    - name: redis-storage
      emptyDir: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
